--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "firebase": "^10.8.0",
     "lucide-react": "^0.322.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.0",
     "tailwind-merge": "^2.2.1",
